- #26 Forts are upgraded by UNITCOMBAT_GUN or UNITCOMBAT_SIEGE, not just Colonial Militia.
- #26 Forts no longer upgrades from being worked on by a colony, only by placing military units on it.
- #40 Worldbuilder issue making very difficult to set diplomatic attitudes fixed.
- #51 Fixed case where AI could turn stone into lumber (copy paste error)
- #73 Shipwrecks no longer appear under ice.
- #86 The Domestic Advisor: Native tab now allows sorting by the goods the indians want.
- #87 Hurry production fails if there isn't warehouse space.
- #96 The Domestic Advisor: native tab now shows natives that you have discovered, but not yet talked with.
- #156 1 plot colony radius allowed colonies to be placed too close, even next to each other in some cases.
- #164 Out of sync GameFont ids resulted in wrong mission icons in Domestic Advisor.
- #172 Remove meaningless assert checks. (Being short on money is completely legitimate and not an error :P)
- #178 CvPlot::updateWorkingCity() now updates cache for CvPlot::hasYield() if the city change.
- #190 Colonies used human player for culture spread threshold instead of colony owner. Spain has a discount.
- #190 Fixed network desync related to culture spread if a human player is Spain.
- Crash if a colonist is on land on the edge of the map (founding code didn't take map edge into account).
- Combat (game) freezes when defeating the last unit of a (European only?) player.
- Colony import all/auto export all buttons now works again (broke in RaR 2.6)

Graphics:
- #158 Reintroduced the pre 2.7 loading screen
- #174 Pick a random loading screen each time a screen is displayed (currently the list has just one file)

Changes affecting xml modders:
- Domestic Advisor can display GameFont characters when using a debug DLL.
- #92 Custom house overhaul, moving settings from DLL hardcoding to xml.

DLL modding changes: